♻️REFACTOR: ChristmasEventController 리펙토링, DateDto 생성중 오류 발생시 입력 다시 진행하기 위해 로직 수정.